src/objects/Team_Member__c.object
<CustomObject>
    <description>Represents an Approver and/or Reviewer who is a member of Proposal.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>CPQ-Field Made to store email body based on requirement</description>
        <label>Email Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>CPQ- Field made to store email subject</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <description>The Role of user which decides what action should be performed by the user</description>
        <inlineHelpText>Role</inlineHelpText>
        <label>Workflow Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewer</fullName>
                    <isActive>false</isActive>
                    <label>Reviewer</label>
                </value>
                <value>
                    <fullName>Final Reviewer</fullName>
                    <isActive>false</isActive>
                    <label>Final Reviewer</label>
                </value>
                <value>
                    <fullName>Approver</fullName>
                </value>
                <value>
                    <fullName>Functional Reviewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Related Proposal record</description>
        <inlineHelpText>Related Proposal record</inlineHelpText>
        <label>Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>Proposal_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_from_RR__c</fullName>
        <description>Contains Resource Request subgroup list.</description>
        <label>Team Member-Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DSB-Bios</fullName>
                </value>
                <value>
                    <fullName>DSB-CEVA</fullName>
                </value>
                <value>
                    <fullName>DSB-Clinical</fullName>
                </value>
                <value>
                    <fullName>DSB-DM</fullName>
                </value>
                <value>
                    <fullName>DSB-LCS</fullName>
                </value>
                <value>
                    <fullName>DSB-MW</fullName>
                </value>
                <value>
                    <fullName>DSB-GSA</fullName>
                </value>
                <value>
                    <fullName>GBO-Lead PD</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Biostats</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-CEVA</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Clinical</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-DM</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-ISS</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Medical</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-MW</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-PM</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Pt Recruitment</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-QA</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Regulatory</fullName>
                </value>
                <value>
                    <fullName>IQB Bidder-Safety</fullName>
                </value>
                <value>
                    <fullName>IQB-Proposal Leader</fullName>
                </value>
                <value>
                    <fullName>IQVIA BAM/BSM</fullName>
                </value>
                <value>
                    <fullName>IQVIA Project Finance Manager</fullName>
                </value>
                <value>
                    <fullName>LCS Product Specialist</fullName>
                </value>
                <value>
                    <fullName>Line manager</fullName>
                </value>
                <value>
                    <fullName>Project Lead</fullName>
                </value>
                <value>
                    <fullName>Strategic Pricing</fullName>
                    <isActive>false</isActive>
                    <label>Strategic Pricing</label>
                </value>
                <value>
                    <fullName>Strategic Pricing lead</fullName>
                    <isActive>false</isActive>
                    <label>Strategic Pricing lead</label>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
                <value>
                    <fullName>TSL-Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSL_Approve_Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CPQ- LC-7407- Field made to track status and send email alert if Quote record is approved offline by PD behalf of TSL</description>
        <label>TSL Approve Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <description>Contains User or contact details.</description>
        <formula>IF(ISBLANK( User__c ), (Contact__r.FirstName+&apos; &apos;+Contact__r.LastName ), User__r.Full_User_Name__c )</formula>
        <label>Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store the user record of Approver/Reviewer</description>
        <inlineHelpText>Approver/Reviewer</inlineHelpText>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ContactId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposal_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>QTM-{00000000}</displayFormat>
        <label>Proposal Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>validateMemberRoleChange</fullName>
        <active>true</active>
        <description>Member Role cannot be updated</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( Member_Role__c ))</errorConditionFormula>
        <errorMessage>Member Role cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validateUserOrContactNotNULL</fullName>
        <active>true</active>
        <description>User Or Contact cannot be blank</description>
        <errorConditionFormula>AND(ISBLANK( User__c ),ISBLANK( Contact__c ))</errorConditionFormula>
        <errorMessage>Please enter User/Contact value.</errorMessage>
    </validationRules>
</CustomObject>